[tool.poetry]
name = "vinos"
version = "0.1.0"
description = ""
authors = ["Agujuarez <agustin.juarez8483@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
